fix: correct domain to sites.jobelab.com (not jobelund.com)
- Fixed Cloudflare Workers routes to use correct jobelab.com domain
- Updated CHANGELOG to reflect correct domain configuration
- This fixes the 522 timeout error by deploying to the correct domain

The worker name is: spectral-stations-instruments

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -31,9 +31,9 @@ USE_CLOUDFLARE_SECRETS = "true"
 
 # Custom domain routes  
 [[routes]]
-pattern = "sites.jobelund.com"
-zone_name = "jobelund.com"
+pattern = "sites.jobelab.com"
+zone_name = "jobelab.com"
 
 [[routes]]
-pattern = "sites.jobelund.com/*"
-zone_name = "jobelund.com"
+pattern = "sites.jobelab.com/*"
+zone_name = "jobelab.com"
