On branch main  Changes to be committed: 	modified:   CHANGELOG.md 	modified:   README.md 	modified:   package.json 	modified:   public/admin/dashboard.html 	modified:   public/css/styles.css 	modified:   public/index.html 	modified:   public/login.html 	modified:   public/station-old.html 	modified:   public/station.html 	modified:   public/station/dashboard.html 	modified:   public/stations.html 	modified:   public/version-manifest.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sites-spectral-stations-instruments",
-  "version": "3.1.2",
-  "description": "SITES Spectral Stations & Instruments Management System v3.1.2 - Integrated interactive map with highlighting functionality and consolidated navigation",
+  "version": "3.1.3",
+  "description": "SITES Spectral Stations & Instruments Management System v3.1.3 - Platform/instrument management with auto-ID generation, transparent map markers, and SITES green branding",
   "main": "src/worker.js",
   "scripts": {
     "dev": "wrangler dev --local --persist-to=.wrangler/state",
